--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,10 @@
         android:id="@+id/progressView"
         android:layout_gravity="right|bottom"
         android:visibility="invisible"
-        android:padding="15dp" />
+        android:elevation="10dp"
+        android:background="@drawable/progress_background"
+        android:layout_margin="20dp"
+        android:padding="10dp" />
 </FrameLayout>
 
 
