--- a/app/src/main/res/layout/activity_palette_entry.xml
+++ b/app/src/main/res/layout/activity_palette_entry.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="130dp"
     android:padding="10dp"
-    android:clickable="false">
+    android:clickable="false"
+    android:id="@+id/palette_entry_container">
 
     <ImageView
         android:layout_width="fill_parent"
