first attempt at saving image to Pictures folder (still need to understand why it isn't showing up in gallery)
customer overflow icon

--- a/app/src/main/res/menu/menu_main_activity.xml
+++ b/app/src/main/res/menu/menu_main_activity.xml
@@ -16,5 +16,11 @@
         android:icon="@drawable/ic_settings_light"
         android:showAsAction="ifRoom"
     />
+
+    <item
+        android:id="@+id/action_save"
+        android:title="@string/action_save"
+        android:showAsAction="never"
+    />
 </menu>
 
