--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="MyActionButtonOverflow" parent="android:style/Theme.Material.Light">
+        <item name="android:src">@drawable/ic_overflow</item>
+    </style>
+
     <style name="AppTheme" parent="android:Theme.Material.Light">
+        <item name="android:actionOverflowButtonStyle">@style/MyActionButtonOverflow</item>
     </style>
 
     <style name="MainActivityTheme" parent="@style/AppTheme">
