--- a/app/src/main/res/menu/menu_main_activity.xml
+++ b/app/src/main/res/menu/menu_main_activity.xml
@@ -22,5 +22,11 @@
         android:title="@string/action_save"
         android:showAsAction="never"
     />
+
+    <item
+        android:id="@+id/action_reset"
+        android:title="@string/action_reset"
+        android:showAsAction="never"
+    />
 </menu>
 
