--- a/app/src/main/res/layout/activity_palette_entry.xml
+++ b/app/src/main/res/layout/activity_palette_entry.xml
@@ -1,24 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<view xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="130dp"
-    android:clickable="false"
-    android:id="@+id/palette_entry_container"
-    android:padding="10dp">
+    android:layout_height="wrap_content"
+    class="android.support.v7.widget.CardView"
+    android:id="@+id/palette_card"
+    card_view:cardCornerRadius="10dp"
+    >
 
-    <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="75dp"
-        android:id="@+id/palette_preview"
-        android:layout_alignParentTop="true" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceListItem"
-        android:id="@+id/palette_title"
-        android:layout_alignParentTop="false"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true" />
+        <view
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            class="android.support.v7.widget.CardView"
+            android:id="@+id/palette_container"
+            card_view:cardCornerRadius="8dp"
+            >
 
-</RelativeLayout>
+            <ImageView
+                android:id="@+id/palette_preview"
+                android:layout_width="match_parent"
+                android:layout_height="100dp" />
+
+        </view>
+
+        <TextView
+            android:textAppearance="?android:attr/textAppearanceListItem"
+            android:id="@+id/palette_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:layout_marginBottom="10dp"
+            android:layout_marginRight="10dp"
+            />
+
+    </LinearLayout>
+</view>
