card views in palette activity now show which entry is currently selected

--- a/app/src/main/res/layout/activity_palette.xml
+++ b/app/src/main/res/layout/activity_palette.xml
@@ -19,5 +19,6 @@
         android:drawSelectorOnTop="false"
         android:dividerHeight="10dp"
         android:paddingLeft="10dp"
-        android:paddingRight="10dp" />
+        android:paddingRight="10dp"
+        android:paddingTop="5dp" />
 </FrameLayout>
