palette activity is now smoother: jumps to correct point in listview straight away and there is now no delay when painting palette previews.
also, palette previews are pregenerated in PaletteDefinition class. there is now only a small scaling operation in PaletteAdapter class

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,7 @@
 
     <dimen name="palette_activity_selected_card">0dp</dimen>
     <dimen name="palette_activity_unselected_card">1dp</dimen>
+
+    <dimen name="palette_activity_preview_height">100dp</dimen>
+    <!-- deliberately no definition for preview_width -->
 </resources>
