--- a/app/src/main/res/layout/activity_palette_entry.xml
+++ b/app/src/main/res/layout/activity_palette_entry.xml
@@ -28,7 +28,8 @@
             <ImageView
                 android:id="@+id/palette_preview"
                 android:layout_width="match_parent"
-                android:layout_height="100dp" />
+                android:layout_height="@dimen/palette_activity_preview_height"
+                android:scaleType="fitXY" />
 
         </view>
 
@@ -39,8 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
             android:layout_marginBottom="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
             />
-
     </LinearLayout>
 </view>
