--- a/app/src/main/res/layout/activity_colours.xml
+++ b/app/src/main/res/layout/activity_colours.xml
@@ -3,18 +3,16 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_vertical|center_horizontal"
-    android:id="@+id/palette_container"
-    >
+    android:gravity="center_vertical|center_horizontal">
 
     <jetsetilly.mandelbrot.view.SlidingTabLayout
-        android:id="@+id/palette_tabs"
+        android:id="@+id/colours_tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/palette_pager"
+        android:id="@+id/colours_pager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/white"/>
