--- a/app/src/main/res/menu/menu_main_activity.xml
+++ b/app/src/main/res/menu/menu_main_activity.xml
@@ -5,7 +5,7 @@
 
     <item
         android:id="@+id/action_palette"
-        android:title="@string/action_palette"
+        android:title="@string/action_colours"
         android:icon="@drawable/ic_palette_light"
         android:showAsAction="ifRoom"
     />
