--- a/app/src/main/res/menu/menu_main_activity.xml
+++ b/app/src/main/res/menu/menu_main_activity.xml
@@ -1,32 +1,32 @@
-
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
 
     <item
         android:id="@+id/action_palette"
         android:title="@string/action_colours"
         android:icon="@drawable/ic_palette_light"
-        android:showAsAction="ifRoom"
+        app:showAsAction="ifRoom"
     />
 
     <item
         android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:icon="@drawable/ic_settings_light"
-        android:showAsAction="ifRoom"
+        app:showAsAction="ifRoom"
     />
 
     <item
         android:id="@+id/action_save"
         android:title="@string/action_save"
-        android:showAsAction="never"
+        app:showAsAction="never"
     />
 
     <item
         android:id="@+id/action_reset"
         android:title="@string/action_reset"
-        android:showAsAction="never"
+        app:showAsAction="never"
     />
 </menu>
 
