Main activity now uses Toolbar instead of Actionbar. First advantage of this is a fancy animation for hiding/showing toolbar.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,8 @@
         android:layout_height="match_parent"
         class="jetsetilly.mandelbrot.RenderCanvas.RenderCanvas"
         android:id="@+id/fractalView"
-        android:cropToPadding="false" />
+        android:cropToPadding="false"
+        />
 
     <view
         android:layout_width="wrap_content"
@@ -31,7 +32,19 @@
         android:cropToPadding="false"
         android:clickable="false"
         android:baselineAlignBottom="false"
-        android:adjustViewBounds="false" />
+        android:adjustViewBounds="false"
+        />
+
+    <view
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        class="jetsetilly.mandelbrot.MyActionBar"
+        android:id="@+id/toolbar"
+        android:layout_gravity="start|top"
+        android:minHeight="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:visibility="invisible" />
+
 </FrameLayout>
 
 
