--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,18 @@
 <resources>
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="@style/Theme.AppCompat.Light">
+    <style name="MyActionButtonOverflow" parent="@style/Theme.AppCompat.Light.NoActionBar">
+        <item name="android:src">@drawable/ic_overflow</item>
+    </style>
+
+    <style name="AppTheme" parent="@style/Theme.AppCompat.Light.NoActionBar">
+        <item name="android:actionOverflowButtonStyle">@style/MyActionButtonOverflow</item>
     </style>
 
     <style name="MainActivityTheme" parent="@style/AppTheme">
-        <item name="android:windowActionBarOverlay">true</item>
         <item name="android:windowTranslucentStatus">true</item>
+    </style>
+
+    <!-- we want an ordinary actionbar for other activities -->
+
+    <style name="OtherActivityTheme" parent="@style/Theme.AppCompat.Light">
     </style>
 </resources>
