--- a/app/src/main/res/anim/action_bar_show.xml
+++ b/app/src/main/res/anim/action_bar_show.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-    <alpha android:fromAlpha="0" android:toAlpha="1.0" android:duration="50" />
-    <translate android:fromYDelta="10%p" android:toYDelta="0" />
-    <scale android:fromXScale="0.5" android:toXScale="1.0"
-        android:fromYScale="0.5" android:toYScale="1.0"
-        android:pivotX="50%" android:pivotY="50%" />
+    <alpha android:fromAlpha="0.1" android:toAlpha="1.0" android:duration="200" />
+    <translate android:fromXDelta="-100%" android:toXDelta="0" android:duration="200" />
 </set>
