--- a/app/src/main/res/menu/menu_main_activity.xml
+++ b/app/src/main/res/menu/menu_main_activity.xml
@@ -25,7 +25,7 @@
 
     <item
         android:id="@+id/action_reset"
-        android:title="@string/action_reset"
+        android:title="@string/action_reset_coords"
         app:showAsAction="never"
     />
 </menu>
