--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -21,17 +21,11 @@
                 android:text="@string/settings_max_iterations_label"
                 android:id="@+id/label_max_iterations" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:id="@+id/iterations"
-                android:layout_gravity="end" />
-
-            <SeekBar
+            <view
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/seek_iterations" />
+                class="jetsetilly.mandelbrot.Widgets.IterationsSlider"
+                android:id="@+id/iterations" />
 
             <Space
                 android:layout_width="match_parent"
