--- a/app/src/main/res/layout/dialog_max_iterations.xml
+++ b/app/src/main/res/layout/dialog_max_iterations.xml
@@ -4,16 +4,10 @@
     android:layout_height="match_parent"
     android:padding="10dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:id="@+id/iterations"
-        android:layout_gravity="end" />
-
-    <SeekBar
+    <view
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/seek_iterations" />
+        class="jetsetilly.mandelbrot.Widgets.IterationsSlider"
+        android:id="@+id/iterations" />
 
 </LinearLayout>
