--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -38,17 +38,11 @@
                 android:text="@string/settings_bailout_label"
                 android:id="@+id/label_bailout" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:id="@+id/bailout"
-                android:layout_gravity="end" />
-
-            <SeekBar
+            <view
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/seek_bailout" />
+                class="jetsetilly.mandelbrot.Widgets.BailoutSlider"
+                android:id="@+id/bailout" />
 
         </LinearLayout>
     </ScrollView>
