--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -44,6 +44,22 @@
                 class="jetsetilly.mandelbrot.Widgets.BailoutSlider"
                 android:id="@+id/bailout" />
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="39dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceListItemSmall"
+                android:text="@string/settings_doubletap_label"
+                android:id="@+id/label_doubletap" />
+
+            <view
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                class="jetsetilly.mandelbrot.Widgets.DoubleTapScaleSlider"
+                android:id="@+id/doubletap" />
         </LinearLayout>
     </ScrollView>
 
