--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,11 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:canvas=".MainActivity">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/background" />
+
     <view
         android:layout_width="match_parent"
         android:layout_height="match_parent"
