mandelbrot settings now saved - when values are changed in Mandelbrot class (correctMandelbrotRage() method)
and restored when app is loaded

--- a/app/src/main/res/menu/menu_main_activity.xml
+++ b/app/src/main/res/menu/menu_main_activity.xml
@@ -28,5 +28,12 @@
         android:title="@string/action_reset_coords"
         app:showAsAction="never"
     />
+
+    <item
+        android:id="@+id/action_redraw"
+        android:title="@string/action_redraw"
+        app:showAsAction="never"
+    />
+
 </menu>
 
