--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -60,6 +60,54 @@
                 android:layout_height="wrap_content"
                 class="jetsetilly.mandelbrot.Widgets.DoubleTapScaleSlider"
                 android:id="@+id/doubletap" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="39dp" />
+
+            <RadioGroup
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/rendermode">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
+                    android:text="@string/settings_rendermode_label"
+                    android:id="@+id/label_rendermode" />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="15dp" />
+
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/settings_rendermode_topdown"
+                    android:id="@+id/rendermode_topdown" />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="10dp" />
+
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/settings_rendermode_centre"
+                    android:id="@+id/rendermode_centre" />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="10dp" />
+
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/settings_rendermode_minmax"
+                    android:id="@+id/rendermode_minmax" />
+            </RadioGroup>
+
         </LinearLayout>
     </ScrollView>
 
