removed min to max render and laid the groundwork for a progressive render mode which should have the same effect.
mandelbrot settings now saved during Settings Activity

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -97,16 +97,17 @@
                     android:text="@string/settings_rendermode_centre"
                     android:id="@+id/rendermode_centre" />
 
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="10dp" />
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/settings_rendermode_minmax"
-                    android:id="@+id/rendermode_minmax" />
             </RadioGroup>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/settings_progressive_render"
+                android:id="@+id/progressive_render" />
 
         </LinearLayout>
     </ScrollView>
