1. custom thumbs for reporting seekbar 2. altered material colors 3. status bar is no longer translucent (to fit better with material themes) 4. Moved some settings classes to new Settings package   4b. MandelbrotSettings still in Mandelbrot package

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="palette_activity_selected_card">#71C3DE</color>
+    <color name="primary_material_light">#ffffff</color>
+    <color name="primary_dark_material_light">#607d8b</color>
+
+    <color name="palette_activity_selected_card">@color/primary_dark_material_light</color>
     <color name="palette_activity_unselected_card">#FFFFFF</color>
-    <color name="primary_material_light">#efefef</color>
+
+    <color name="seekbar_thumb_colour">@color/accent_material_light</color>
 </resources>
