--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,7 @@
 
     <dimen name="palette_activity_preview_height">100dp</dimen>
     <!-- deliberately no definition for preview_width -->
+
+    <dimen name="seekbar_thumb_height">20dp</dimen>
+    <dimen name="seekbar_thumb_width">10dp</dimen>
 </resources>
