completely rewrote PaletteActivity (used to be called ColorsActivity)
1. list view is now a grid view

2. displayed palette swatches are circular
  2a. we need to fix the wasteful calls in onDraw() implementation of CircularImageView

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
     <view
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        class="jetsetilly.mandelbrot.MyActionBar"
+        class="jetsetilly.mandelbrot.MandelbrotActionBar"
         android:id="@+id/toolbar"
         android:layout_gravity="start|top"
         android:minHeight="?attr/actionBarSize"
