--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,7 +13,10 @@
         -->
     </style>
 
-    <style name="OtherActivityTheme" parent="@style/Theme.AppCompat.Light">
+    <style name="PaletteActivityTheme" parent="@style/AppTheme">
+    </style>
+
+    <style name="SettingsActivityTheme" parent="@style/Theme.AppCompat.Light">
         <!-- we want an ordinary action bar for other activities -->
     </style>
 
