SettingsActivity now uses Toolbar rather than old fashioned ActionBar - other activities had already been fitted with the Toolbar

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,8 +16,7 @@
     <style name="PaletteActivityTheme" parent="@style/AppTheme">
     </style>
 
-    <style name="SettingsActivityTheme" parent="@style/Theme.AppCompat.Light">
-        <!-- we want an ordinary action bar for other activities -->
+    <style name="SettingsActivityTheme" parent="@style/AppTheme">
     </style>
 
     <!-- theme for iterations dialog -->
