--- a/app/src/main/res/layout/activity_palette_entry.xml
+++ b/app/src/main/res/layout/activity_palette_entry.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
+        <jetsetilly.mandelbrot.Widgets.PaletteSwatch
             android:layout_width="@dimen/palette_swatch_size"
             android:layout_height="@dimen/palette_swatch_size"
             android:layout_gravity="center"
