using new material icons https://design.google.com/icons/

--- a/app/src/main/res/menu/menu_settings_activity.xml
+++ b/app/src/main/res/menu/menu_settings_activity.xml
@@ -6,7 +6,7 @@
     <item
         android:id="@+id/settings_action_reset"
         android:title="@string/settings_action_reset"
-        android:icon="@drawable/ic_reset_settings"
+        android:icon="@drawable/ic_undo_24dp"
         app:showAsAction="always"
         />
 </menu>
