1. simplified how scale values are calculated 2. added cancelDraw() callback to MandelbrotCanvas and implementations (RenderCanvas). called when thread is cancelled (endDraw() is called when thread ends naturally) 3. altered how pinch-zoom and scrolling events are chained. added scaleCorrection() method to RenderCanvas class. start reading from there.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
     <style name="MyActionButtonOverflow" parent="@style/Theme.AppCompat.Light.NoActionBar">
-        <item name="android:src">@drawable/ic_overflow</item>
+        <item name="android:src">@drawable/ic_more_vert_24dp</item>
     </style>
 
     <style name="AppTheme" parent="@style/Theme.AppCompat.Light.NoActionBar">
