--- a/app/src/main/res/menu/menu_main_activity.xml
+++ b/app/src/main/res/menu/menu_main_activity.xml
@@ -35,5 +35,10 @@
         app:showAsAction="never"
     />
 
+    <item
+        android:id="@+id/action_toggle_info_pane"
+        android:title="@string/action_toggle_info_pane"
+        app:showAsAction="never"
+    />
 </menu>
 
