animated info_pane toggle

--- a/app/src/main/res/values/animation_timings.xml
+++ b/app/src/main/res/values/animation_timings.xml
@@ -4,4 +4,5 @@
     <integer name="palette_selected_untick_duration">250</integer>
     <integer name="palette_selected_spin_duration">250</integer>
     <integer name="palette_selected_pulse_duration">125</integer>
+    <integer name="info_pane_fade">250</integer>
 </resources>
