--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,15 +54,17 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="monospace"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:id="@+id/info_pane"
         android:layout_gravity="left|bottom"
         android:text="Small Text"
         android:padding="7dp"
-        android:background="#ffffff"
+        android:background="#bbffffff"
         android:backgroundTint="@color/primary_dark_material_light"
         android:textColor="@color/primary_text_default_material_light"
         android:visibility="invisible"
+        android:alpha="0"
         />
 
 </FrameLayout>
