--- a/app/src/main/res/layout/dialog_max_iterations.xml
+++ b/app/src/main/res/layout/dialog_max_iterations.xml
@@ -7,7 +7,7 @@
     <view
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        class="jetsetilly.mandelbrot.Widgets.IterationsSlider"
+        class="jetsetilly.mandelbrot.Widgets.IterationsSeekBar"
         android:id="@+id/iterations" />
 
 </LinearLayout>
